# llm-twin

./: .gitignore  README.md  pyproject.toml
configs/: feature_engineering.yaml
domain/: chunks.py  cleaned_documents.py  embedded_chunks.py
domain/base/: vector.py
llm_engineering/: settings.py
llm_engineering/application/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
llm_engineering/application/networks/: embeddings.py
llm_engineering/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/preprocessing/operations/: chunking.py
llm_engineering/application/rag/: prompt_templates.py  query_expansion.py  reranking.py  retriever.py
llm_engineering/domain/: documents.py  types.py
llm_engineering/domain/base/: nosql.py  vector.py
llm_engineering/infrastructure/: inference_pipeline_api.py
llm_engineering/infrastructure/aws/deploy/huggingface/: config.py  run.py  sagemaker_huggingface.py
llm_engineering/model/inference/: inference.py
pipelines/: end_to_end_data.py  feature_engineering.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
