[tool.poetry]
name = "llm-twin"
version = "0.1.0"
description = ""
authors = ["Eric Fernald"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.25.1"
numpy = "^1.19.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest"
format = "black ."
start = "python main.py"